[project]
name = "n31l"
version = "2.2.0"
description = "N31L is a utilitarian bot for the Call of Duty server."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
    "loguru-discord>=1.4.0",
    "hikari-arc>=1.4.0",
    "httpx>=0.27.2",
    "asyncpraw>=7.7.1",
    "urlextract>=1.9.0",
    "uvloop>=0.20.0; sys_platform != 'win32'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.9",
    "asyncpraw-stubs>=0.0.3",
]

[tool.ruff.lint]
select = ["I"]
